--- a/mandelbulber2/formula/ui/scator_power2_imaginary.ui
+++ b/mandelbulber2/formula/ui/scator_power2_imaginary.ui
@@ -74,7 +74,7 @@
 &lt;tr&gt;&lt;th&gt;Author&lt;/th&gt;&lt;td&gt;Manuel Fernandez-Guasti&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;imaginary scator power2 001.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
