--- a/mandelbulber2/formula/ui/transf_sin_or_cos.ui
+++ b/mandelbulber2/formula/ui/transf_sin_or_cos.ui
@@ -381,7 +381,7 @@ cosine</string>
         <property name="text">
          <string notr="true">&lt;p&gt;sin or cos z&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/Jos Leys Kleinian Hybrid inv cos.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
