--- a/mandelbulber2/formula/ui/pseudo_kleinian_mod2.ui
+++ b/mandelbulber2/formula/ui/pseudo_kleinian_mod2.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
+ <class>pseudo_kleinian_mod2</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -2275,7 +2275,7 @@ offset:</string>
          </font>
         </property>
         <property name="text">
-         <string>Pseudo Kleinian  (DE parameters only works in slot #1)</string>
+         <string>Pseudo Kleinian (DE parameters only works in slot #1)</string>
         </property>
        </widget>
       </item>
